[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reparatio"
version = "0.1.0"
description = "Python SDK for the Reparatio data conversion API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["csv", "parquet", "excel", "data", "conversion", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://reparatio.app"
Repository = "https://github.com/jfrancis42/reparatio-sdk"
"Bug Tracker" = "https://github.com/jfrancis42/reparatio-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/reparatio"]
